...

    <TextView
        android:id="@+id/warning_p7_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/warning_p7_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/button_p7"
        android:layout_width="231dp"
        android:layout_height="61dp"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
